deployments/apiv2/manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apiv2
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: group=workers
