deployments/apiv2/manifests/base/event-broker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-broker
spec:
  ports:
  - name: http
    targetPort: 9002
    port: 80
  type: ClusterIP
  selector:
    app: apiv2
