deployments/apiv2/manifests/base/users-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 80
  type: ClusterIP
  selector:
    app: apiv2
