deployments/apiv2/manifests/base/apiv2-dep.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apiv2
  labels:
    app: apiv2
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: apiv2
  template:
    metadata:
      labels:
        app: apiv2
        version: latest
    spec:
      containers:
      - name: users
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
      - name: mantarray
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apiv2-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/rewrites: serviceName=mantarray rewrite=/; serviceName=users rewrite=/
status:
  loadBalancer: {}
spec:
  rules:
  - host: apiv2.curibio-test.com
    http:
      paths:
      - path: /users/
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 80
      - path: /mantarray/
        pathType: Prefix
        backend:
          service:
            name: mantarray
            port:
              number: 80
